@@ -277,13 +277,13 @@ assert.cb.do-robust-fitting-with-tuning-factor=off
 assert.cb.find-weights-for-contours,-not-points=off
 assert.tf.do-robust-fitting-with-tuning-factor=1.0
 assert.tf.metro-factor=0.25
-assert.tf.cycle-limit=1000
+assert.tf.iteration-limit=1000
 # check enabled/disabled
 assert.enabled.cb.do-robust-fitting-with-tuning-factor=
 assert.disabled.cb.find-weights-for-contours,-not-points=
 assert.disabled.tf.do-robust-fitting-with-tuning-factor=
 assert.enabled.tf.metro-factor=
-assert.enabled.tf.cycle-limit=
+assert.enabled.tf.iteration-limit=
 #check behavior
 cb.do-robust-fitting-with-tuning-factor=on
 assert.enabled.tf.do-robust-fitting-with-tuning-factor=
