@@ -441,9 +441,9 @@ set.var.better-radius=2.5
 set.var.findbeads3d-binning = 1
 # center-to-center-thickness + additional-unbinned-diameters-to-add*int-unbinned-bead-diameter
 set.var.erase-gold-thickness=98
-set.var.incremental-shift-to-center.a=-12.5
-set.var.incremental-shift-to-center.b=-12.3
-set.var.incremental-shift-to-center-simple-align.a=-12.2
+set.var.incremental-shift-to-center.a=-12.8
+set.var.incremental-shift-to-center.b=-12.6
+set.var.incremental-shift-to-center-simple-align.a=-12.5
 set.var.incremental-shift-to-center-simple-align.b=-13.9
 set.var.final-align-comscript=newst
 set.var.final-align-command=newstack
