@@ -25,7 +25,7 @@ AdjustOrigin
 XTILTFILE BBa.xtilt
 LOCALFILE BBalocal.xf
 OFFSET 0.0
-SHIFT 0.0 -12.5
+SHIFT 0.0 -12.8
 ZFACTORFILE BBa.zfac
 ActionIfGPUFails 1,2
 EXCLUDELIST 1
