@@ -20,7 +20,7 @@ PERPENDICULAR
 AdjustOrigin 
 RADIAL 0.35 0.05
 SCALE 0.0 1000.0
-SHIFT 0.0 -12.3
+SHIFT 0.0 -12.6
 SUBSETSTART -19 -19
 THICKNESS 98
 TILTFILE BBb.tlt
